<resources>
    <string name="app_name">GROUP19_HW2</string>
    <string name="title">Area Calculator</string>
    <string name="length1">Length 1: </string>
    <string name="length2">Length 2: </string>
    <string name="default_string">Select a shape</string>
    <string name="triangle">Triangle</string>
    <string name="square">Square</string>
    <string name="circle">Circle</string>
    <string name="btn_one">Calculate</string>
    <string name="btn_two">Clear</string>
</resources>
