<?xml version="1.0" encoding="utf-8"?>

<!--
    ************************ Assignment #HOMEWORK 02 *******************************************
    *********************** File Name- activity_main.xml *************************************
    ************************ Full Name- 1. Manali Ghare 2. Anup Deshpande (Group 19) ***********
-->

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    tools:context=".MainActivity"
    android:background="@color/white">

    <TextView
        android:id="@+id/length_one_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/length1"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/length_two_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/length2"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/length_one_label"
        app:layout_constraintStart_toStartOf="@id/length_one_label"/>

    <EditText
        android:id="@+id/length1"
        android:layout_width="240dp"
        android:layout_height="44dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toRightOf="@id/length_one_label"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/length2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="@id/length1"
        app:layout_constraintStart_toStartOf="@id/length1"
        app:layout_constraintTop_toBottomOf="@id/length1" />

    <ImageView
        android:id="@+id/triangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:srcCompat="@drawable/triangle"
        tools:layout_editor_absoluteX="52dp"
        tools:layout_editor_absoluteY="209dp"
        app:layout_constraintStart_toStartOf="@id/length_two_label"
        app:layout_constraintTop_toBottomOf="@id/length_two_label"/>

    <ImageView
        android:id="@+id/square"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="64dp"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toStartOf="@+id/circle"
        app:layout_constraintStart_toEndOf="@+id/triangle"
        app:layout_constraintTop_toBottomOf="@+id/length2"
        app:srcCompat="@drawable/square" />

    <ImageView
        android:id="@+id/circle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="64dp"
        app:layout_constraintEnd_toEndOf="@id/length2"
        app:layout_constraintTop_toBottomOf="@id/length2"
        app:srcCompat="@drawable/circle" />

    <TextView
        android:id="@+id/shape"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="35dp"
        android:textSize="20dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/default_string"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/square" />

    <Button
        android:id="@+id/calculate_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="50dp"
        android:paddingBottom="10dp"
        android:paddingLeft="65dp"
        android:paddingRight="65dp"
        android:paddingTop="10dp"
        android:text="@string/btn_one"
        android:textAllCaps="false"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shape" />

    <TextView
        android:id="@+id/display_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/calculate_btn" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="30dp"
        android:paddingBottom="10dp"
        android:paddingLeft="75dp"
        android:paddingRight="75dp"
        android:paddingTop="10dp"
        android:text="@string/btn_two"
        android:textAllCaps="false"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/display_result" />


</android.support.constraint.ConstraintLayout>